--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1567,8 +1567,8 @@
   "boilerplate.containers.Payroll.Employee.job.ruleTemplate": "Rule Template",
   "boilerplate.containers.Payroll.Employee.jobName": "Job Name",
   "boilerplate.containers.Payroll.Employee.jobsReport": "Jobs Report",
-  "boilerplate.containers.Payroll.Employee.isDelivered": "Is Delivered",
-  "boilerplate.containers.Payroll.Employee.isNotDelivered": "Is Not Delivered",
+  "boilerplate.containers.Payroll.Employee.isDelivered": "Delivered",
+  "boilerplate.containers.Payroll.Employee.isNotDelivered": "Not Delivered",
   "boilerplate.containers.Payroll.Employee.mobile": "Mobile",
   "boilerplate.containers.Payroll.Employee.modifyEmployeeDataIfTheyAlreadyExist": "Modify employee data if they already exist",
   "boilerplate.containers.Payroll.Employee.nickName": "Nick Name",
