--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2275,6 +2275,7 @@
   "boilerplate.containers.Payroll.Payroll.maxRepeat": "حد التكرار الاقصى",
   "boilerplate.containers.Payroll.Payroll.MedInsElement": "عنصر خصم التأمين",
   "boilerplate.containers.Payroll.Payroll.eleOfCalcValOfVac": "عناصر احتساب قيمة الاحازات",
+  "boilerplate.containers.Payroll.Payroll.Smartobjectiveelement": "عنصر الهدف الذكي",
   "boilerplate.containers.Payroll.Payroll.min": "الحد الادنى",
   "boilerplate.containers.Payroll.Payroll.minDailyWorkHours": "الحد الادنى لساعات العمل",
   "boilerplate.containers.Payroll.Payroll.insDate": "تاريخ الطلب",
