--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2274,6 +2274,7 @@
   "boilerplate.containers.Payroll.Payroll.maxRepeat": "max Repeat/month",
   "boilerplate.containers.Payroll.Payroll.MedInsElement": "Medical Ins Element",
   "boilerplate.containers.Payroll.Payroll.eleOfCalcValOfVac": "Elements of calculating vacation value",
+  "boilerplate.containers.Payroll.Payroll.Smartobjectiveelement": "Smart objective element",
   "boilerplate.containers.Payroll.Payroll.min": "Minimum",
   "boilerplate.containers.Payroll.Payroll.minDailyWorkHours": "min Daily WorkHours",
   "boilerplate.containers.Payroll.Payroll.insDate": "Insert Date",
