--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -2542,6 +2542,7 @@
   "boilerplate.containers.Payroll.recruitment.qualification": "المؤهل",
   "boilerplate.containers.Payroll.recruitment.Question": "سؤال",
   "boilerplate.containers.Payroll.recruitment.questionsCardsTitle": "اسئلة اقصائية",
+  "boilerplate.containers.Payroll.recruitment.addToTraining": "اضف إلى التدريب",
   "boilerplate.containers.Payroll.recruitment.reason": "السبب",
   "boilerplate.containers.Payroll.recruitment.rejected": "مرفوض",
   "boilerplate.containers.Payroll.recruitment.replacementPosition": "وظيفة الاستبدال",
