--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2742,6 +2742,7 @@
   "boilerplate.containers.Payroll.survey.surveyType": "Survey type",
   "boilerplate.containers.Payroll.survey.thankYouForCompleteTheSurvey": "Thank you for completing the survey",
   "boilerplate.containers.Payroll.survey.thereAreQuestionsThatYouDidNotAnswerWhichAre": "There are questions that you did not answer which are",
+  "boilerplate.containers.Payroll.survey.surveyTemplate": "Survey Template",
   "boilerplate.containers.Payroll.thursday": "Thursday",
   "boilerplate.containers.Payroll.title": "Title",
   "boilerplate.containers.Payroll.todate": "To Date",
