finish SurveyHistoryReport page and SurveyFollowReport page , update ResignTrxCreate page , fix issue in VacationTypeCreate page , fix issue in Employment page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2744,6 +2744,9 @@
   "boilerplate.containers.Payroll.survey.thankYouForCompleteTheSurvey": "شكراً لإكمال الاستبيان",
   "boilerplate.containers.Payroll.survey.thereAreQuestionsThatYouDidNotAnswerWhichAre": "هناك أسئلة لم تجب عليها وهي",
   "boilerplate.containers.Payroll.survey.surveyTemplate": "قالب استطلاع الراي",
+  "boilerplate.containers.Payroll.survey.allEmployee": "كل الموظفين",
+  "boilerplate.containers.Payroll.survey.completeSurvey": "الاستطلاع الكامل",
+  "boilerplate.containers.Payroll.survey.surveyNotDone": "لم يتم الاستطلاع",
   "boilerplate.containers.Payroll.thursday": "الخميس",
   "boilerplate.containers.Payroll.title": "الموضوع",
   "boilerplate.containers.Payroll.todate": "الى تاريخ",
@@ -3023,6 +3026,8 @@
   "boilerplate.containers.Payroll.selectPayrollEmployee": "اختر موظف الرواتب",
   "boilerplate.containers.Payroll.invalidUser": "مستخدم غير صالح",
   "boilerplate.containers.Payroll.transactionDate": "تاريخ التسجيل",
+  "boilerplate.containers.Payroll.startDate": "تاريخ البدايه",
+  "boilerplate.containers.Payroll.endDate": " تاريخ الانتهاء",
   "boilerplate.containers.Tables.Basic.bordered.desc": "القديم ذهب ، وهنا طاولة قديمة تحدها الموضة ، قمنا بتبديلها قليلاً حتى تبدو العناوين أكثر وضوحًا.",
   "boilerplate.containers.Tables.Basic.bordered.title": "جدول يحده",
   "boilerplate.containers.Tables.Basic.coloured.desc": "Description",
