--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2743,6 +2743,9 @@
   "boilerplate.containers.Payroll.survey.thankYouForCompleteTheSurvey": "Thank you for completing the survey",
   "boilerplate.containers.Payroll.survey.thereAreQuestionsThatYouDidNotAnswerWhichAre": "There are questions that you did not answer which are",
   "boilerplate.containers.Payroll.survey.surveyTemplate": "Survey Template",
+  "boilerplate.containers.Payroll.survey.allEmployee": "All Employee",
+  "boilerplate.containers.Payroll.survey.completeSurvey": "Complete Survey",
+  "boilerplate.containers.Payroll.survey.surveyNotDone": "Survey Not Done",
   "boilerplate.containers.Payroll.thursday": "Thursday",
   "boilerplate.containers.Payroll.title": "Title",
   "boilerplate.containers.Payroll.todate": "To Date",
@@ -3022,6 +3025,8 @@
   "boilerplate.containers.Payroll.selectPayrollEmployee": "Select Payroll Employee",
   "boilerplate.containers.Payroll.invalidUser": "Invalid User",
   "boilerplate.containers.Payroll.transactionDate": "Transaction Date",
+  "boilerplate.containers.Payroll.startDate": "Start Date",
+  "boilerplate.containers.Payroll.endDate": "End Date",
   "boilerplate.containers.Tables.Basic.bordered.desc": "Old is gold, here is old fashion bordered table, we tweaked it a bit so that the headings looks more prominent.",
   "boilerplate.containers.Tables.Basic.bordered.title": "Bordered Table",
   "boilerplate.containers.Tables.Basic.coloured.desc": "Description",
