--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2635,6 +2635,8 @@
   "boilerplate.containers.Payroll.Setting.favorites": "المفضلة",
   "boilerplate.containers.Payroll.Setting.filterMess": "يجب عليك تحديد اسم الموظف أو اسم المستخدم",
   "boilerplate.containers.Payroll.Setting.notAllowedEmployees": "الموظفين الغير المسموح لهم",
+  "boilerplate.containers.Payroll.Setting.menutemplateEN": "قالب القائمة بالانجليزية",
+  "boilerplate.containers.Payroll.Setting.menutemplateAR": "قالب القائمة بالعربية",
   "boilerplate.containers.Payroll.Setting.fontSize": "حجم النص",
   "boilerplate.containers.Payroll.Setting.formTypeName": "اسم نوع النموذج",
   "boilerplate.containers.Payroll.Setting.fromDate": "من تاريخ",
