Recruitment - HRApplicationEvaluation - add "hold" action

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -2446,6 +2446,9 @@
   "boilerplate.containers.Payroll.recruitment.callStatus": "حالة المكالمة",
   "boilerplate.containers.Payroll.recruitment.candidateName": "اسم المرشح",
   "boilerplate.containers.Payroll.recruitment.close": "إغلاق",
+  "boilerplate.containers.Payroll.recruitment.hold": "تعليق",
+  "boilerplate.containers.Payroll.recruitment.holdBy": "تم التعليق بواسطة",
+  "boilerplate.containers.Payroll.recruitment.unHold": "الغاء التعليق",
   "boilerplate.containers.Payroll.recruitment.comment": "تعليق",
   "boilerplate.containers.Payroll.recruitment.comments": "تعليقات",
   "boilerplate.containers.Payroll.recruitment.commession": "العمولة",
