--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2447,6 +2447,9 @@
   "boilerplate.containers.Payroll.recruitment.close": "Close",
   "boilerplate.containers.Payroll.recruitment.comment": "Comment",
   "boilerplate.containers.Payroll.recruitment.comments": "Comments",
+  "boilerplate.containers.Payroll.recruitment.hold": "Hold",
+  "boilerplate.containers.Payroll.recruitment.holdBy": "Hold By",
+  "boilerplate.containers.Payroll.recruitment.unHold": "Un Hold",
   "boilerplate.containers.Payroll.recruitment.commession": "Commession",
   "boilerplate.containers.Payroll.recruitment.confirm": "Confirm",
   "boilerplate.containers.Payroll.recruitment.contractDuration": "Contract Duration",
