add and update translations

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1509,7 +1509,7 @@
   "boilerplate.containers.Payroll.Employee.businessUnit": "وحدات عمل",
   "boilerplate.containers.Payroll.Employee.birthDateValidationErrMess": "يجب ألا يقل العمر عن 16 عامًا",
   "boilerplate.containers.Payroll.Employee.salute": "التحية",
-  "boilerplate.containers.Payroll.Employee.menuTemplate": "قالب القائمة",
+  "boilerplate.containers.Payroll.Employee.menuTemplate": "نموذج الصلاحيات",
   "boilerplate.containers.Payroll.Employee.car.carModel": "موديل السيارة",
   "boilerplate.containers.Payroll.Employee.car.hasLicense": "يوجد رخصة قيادة",
   "boilerplate.containers.Payroll.Employee.car.licenseGrade": "درجة الرخصة",
@@ -1719,6 +1719,11 @@
   "boilerplate.containers.Payroll.Employee.workMobile": "رقم الهاتف للعمل",
   "boilerplate.containers.Payroll.Employee.workSheet": "صفحات العمل",
   "boilerplate.containers.Payroll.Employee.youMustChooseAnEmployee": "يجب اختيار موظف",
+  "boilerplate.containers.Payroll.Employee.guarantor": "الكفيل",
+  "boilerplate.containers.Payroll.Employee.AccruedLeaveBalance": "رصيد الاجازات السنوى",
+  "boilerplate.containers.Payroll.Employee.StartDateOfWork": "تاريخ مباشرة العمل",
+  "boilerplate.containers.Payroll.Employee.BorderNumber": "رقم الحدود",
+  "boilerplate.containers.Payroll.Employee.ResidenceNumber": "رقم الاقامة",
   "boilerplate.containers.Payroll.employeeCode": "كود الموظف",
   "boilerplate.containers.Payroll.employeeDeduced": "خصم الموظف",
   "boilerplate.containers.Payroll.employeeId": "كود الموظف",
@@ -2134,7 +2139,7 @@
   "boilerplate.containers.Payroll.minutesCount": "عدد الدقائق",
   "boilerplate.containers.Payroll.mission": "مأمورية",
   "boilerplate.containers.Payroll.monday": "الاثنين",
-  "boilerplate.containers.Payroll.month": "شهرى",
+  "boilerplate.containers.Payroll.month": "شهر",
   "boilerplate.containers.Payroll.monthName": "الشهر",
   "boilerplate.containers.Payroll.more": "اكثر",
   "boilerplate.containers.Payroll.name": "الاسم",
@@ -2336,7 +2341,7 @@
   "boilerplate.containers.Payroll.Payroll.refElement": "العناصر المنسب اليها",
   "boilerplate.containers.Payroll.Payroll.refranceElement": "عنصر استرشادى",
   "boilerplate.containers.Payroll.Payroll.refranceElements": "عناصر استرشادية",
-  "boilerplate.containers.Payroll.Payroll.relatedToWorkdays": "مرتبط بايام العمل",
+  "boilerplate.containers.Payroll.Payroll.relatedToWorkhours": "مرتبط بساعات العمل",
   "boilerplate.containers.Payroll.Payroll.remainLoansNo": "عدد الاقساط المتبقية",
   "boilerplate.containers.Payroll.Payroll.remainLoansValue": "قيمة الاقساط المتبقية",
   "boilerplate.containers.Payroll.Payroll.reportCriteria": "بيانات العرض",
@@ -3028,7 +3033,7 @@
   "boilerplate.containers.Payroll.Workflow.workFlowCreateTitle": "اضافة دورة عمل",
   "boilerplate.containers.Payroll.Workflow.workFlowUpdateTitle": "تعديل دورة عمل",
   "boilerplate.containers.Payroll.workingYears": "سنين العمل",
-  "boilerplate.containers.Payroll.year": "سنوى",
+  "boilerplate.containers.Payroll.year": "سنة",
   "boilerplate.containers.Payroll.Yearly": "سنويا",
   "boilerplate.containers.Payroll.yearName": "السنة",
   "boilerplate.containers.Payroll.yes": "نعم",
