--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1508,7 +1508,7 @@
   "boilerplate.containers.Payroll.Employee.businessUnit": "Business Unit",
   "boilerplate.containers.Payroll.Employee.birthDateValidationErrMess": "Age must to not be less than 16 years",
   "boilerplate.containers.Payroll.Employee.salute": "Salute",
-  "boilerplate.containers.Payroll.Employee.menuTemplate": "Menu Template",
+  "boilerplate.containers.Payroll.Employee.menuTemplate": "Permission Templete",
   "boilerplate.containers.Payroll.Employee.car.carModel": "Car Model",
   "boilerplate.containers.Payroll.Employee.car.hasLicense": "Has License",
   "boilerplate.containers.Payroll.Employee.car.licenseGrade": "License Grade",
@@ -1717,6 +1717,11 @@
   "boilerplate.containers.Payroll.Employee.workMobile": "Work Mobile",
   "boilerplate.containers.Payroll.Employee.workSheet": "Worksheet",
   "boilerplate.containers.Payroll.Employee.youMustChooseAnEmployee": "You must choose an employee",
+  "boilerplate.containers.Payroll.Employee.guarantor": "Guarantor",
+  "boilerplate.containers.Payroll.Employee.AccruedLeaveBalance": "Accrued Leave Balance",
+  "boilerplate.containers.Payroll.Employee.StartDateOfWork": "Start Date Of Work",
+  "boilerplate.containers.Payroll.Employee.BorderNumber": "Border Number",
+  "boilerplate.containers.Payroll.Employee.ResidenceNumber": "Residence Number",
   "boilerplate.containers.Payroll.employeeCode": "Employee Code",
   "boilerplate.containers.Payroll.employeeDeduced": "Employee Deduced",
   "boilerplate.containers.Payroll.employeeId": "Employee Id",
@@ -2332,9 +2337,9 @@
   "boilerplate.containers.Payroll.Payroll.quantity": "Quantity",
   "boilerplate.containers.Payroll.Payroll.recalculate": "ReCalculate",
   "boilerplate.containers.Payroll.Payroll.refElement": "Refrenace Elements",
-  "boilerplate.containers.Payroll.Payroll.refranceElement": "Is arefrenac Element",
+  "boilerplate.containers.Payroll.Payroll.refranceElement": "Refrence Element",
   "boilerplate.containers.Payroll.Payroll.refranceElements": "Refrance Elements",
-  "boilerplate.containers.Payroll.Payroll.relatedToWorkdays": "Related to work days",
+  "boilerplate.containers.Payroll.Payroll.relatedToWorkhours": "Related to work hours",
   "boilerplate.containers.Payroll.Payroll.remainLoansNo": "Remain Loans No",
   "boilerplate.containers.Payroll.Payroll.remainLoansValue": "Remain Loans Value",
   "boilerplate.containers.Payroll.Payroll.reportCriteria": "Report Criteria",
