--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2220,6 +2220,7 @@
   "boilerplate.containers.Payroll.Payroll.elementValColNum": "Value Column Number",
   "boilerplate.containers.Payroll.Payroll.exportSectionAndCode": "Export section and code",
   "boilerplate.containers.Payroll.Payroll.joblevel": "Job Level",
+  "boilerplate.containers.Payroll.Payroll.AffectSettlement": "Affect Settlement",
   "boilerplate.containers.Payroll.Payroll.ElementValCreateTitle": "Add Employee Element",
   "boilerplate.containers.Payroll.Payroll.ElementValUpdateTitle": "update Employee Element",
   "boilerplate.containers.Payroll.Payroll.elemMaxMin": "Element has Max/Min value",
