finish ResignReason page with update some translations

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1798,6 +1798,10 @@
   "boilerplate.containers.Payroll.HumanResources.editTransferRequesTitle": "تعديل طلب نقل",
   "boilerplate.containers.Payroll.HumanResources.oldOrganization": "المنظمة القديمة",
   "boilerplate.containers.Payroll.HumanResources.newOrganization": "الادارة الجديدة",
+  "boilerplate.containers.Payroll.HumanResources.specifiedContract": "عقد محدد المده",
+  "boilerplate.containers.Payroll.HumanResources.notSpecifiedContract": "عقد غير محدد المده",
+  "boilerplate.containers.Payroll.HumanResources.CreateResignReason": "إضافة سبب الاستقالة",
+  "boilerplate.containers.Payroll.HumanResources.EditResignReason": "تعديل سبب الاستقالة",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "كود الموظف",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "تحقيق مع موظف",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "الموظف",
@@ -2653,7 +2657,7 @@
   "boilerplate.containers.Payroll.Setting.lastDayToApproveEmployeeRequests": "آخر يوم للموافقة على طلبات الموظف",
   "boilerplate.containers.Payroll.Setting.late": "التأخير",
   "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "لإنشاء كلمة مرور عشوائية، اترك النص فارغًا",
-  "boilerplate.containers.Payroll.Setting.loan": "قرض",
+  "boilerplate.containers.Payroll.Setting.loan": "سلفه",
   "boilerplate.containers.Payroll.Setting.menuName": "اسم القائمة",
   "boilerplate.containers.Payroll.Setting.mission": "مهمة",
   "boilerplate.containers.Payroll.Setting.month": "الشهر",
