--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1614,7 +1614,7 @@
   "boilerplate.containers.Payroll.Employee.personal.isSpecialNeeds": "Is SpecialNeeds",
   "boilerplate.containers.Payroll.Employee.personal.jobname": "Job",
   "boilerplate.containers.Payroll.Employee.personal.jopTitle": "Jop Title",
-  "boilerplate.containers.Payroll.Employee.personal.loan": "السلف",
+  "boilerplate.containers.Payroll.Employee.personal.loan": "Loan",
   "boilerplate.containers.Payroll.Employee.personal.machineCode": "Ref.No",
   "boilerplate.containers.Payroll.Employee.personal.militaryStatus": "Military Status",
   "boilerplate.containers.Payroll.Employee.personal.motherName": "Mother Name",
@@ -1797,6 +1797,10 @@
   "boilerplate.containers.Payroll.HumanResources.editTransferRequesTitle": "Edit Transfer Request",
   "boilerplate.containers.Payroll.HumanResources.oldOrganization": "Old Organization",
   "boilerplate.containers.Payroll.HumanResources.newOrganization": "New Organization",
+  "boilerplate.containers.Payroll.HumanResources.specifiedContract": "Specified Contract",
+  "boilerplate.containers.Payroll.HumanResources.notSpecifiedContract": "Not Specified Contract",
+  "boilerplate.containers.Payroll.HumanResources.CreateResignReason": "Create Resign Reason",
+  "boilerplate.containers.Payroll.HumanResources.EditResignReason": "Edit Resign Reason",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "Employee",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "Employee Investigation",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "Employee",
