--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1799,6 +1799,10 @@
   "boilerplate.containers.Payroll.HumanResources.editTransferRequesTitle": "تعديل طلب نقل",
   "boilerplate.containers.Payroll.HumanResources.oldOrganization": "الادارة القديمة",
   "boilerplate.containers.Payroll.HumanResources.newOrganization": "الادارة الجديدة",
+  "boilerplate.containers.Payroll.HumanResources.specifiedContract": "عقد محدد المده",
+  "boilerplate.containers.Payroll.HumanResources.notSpecifiedContract": "عقد غير محدد المده",
+  "boilerplate.containers.Payroll.HumanResources.CreateResignReason": "إضافة سبب الاستقالة",
+  "boilerplate.containers.Payroll.HumanResources.EditResignReason": "تعديل سبب الاستقالة",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "كود الموظف",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "تحقيق مع موظف",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "الموظف",
@@ -2654,7 +2658,7 @@
   "boilerplate.containers.Payroll.Setting.lastDayToApproveEmployeeRequests": "آخر يوم للموافقة على طلبات الموظف",
   "boilerplate.containers.Payroll.Setting.late": "التأخير",
   "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "لإنشاء كلمة مرور عشوائية، اترك النص فارغًا",
-  "boilerplate.containers.Payroll.Setting.loan": "قرض",
+  "boilerplate.containers.Payroll.Setting.loan": "سلفه",
   "boilerplate.containers.Payroll.Setting.menuName": "اسم القائمة",
   "boilerplate.containers.Payroll.Setting.mission": "مهمة",
   "boilerplate.containers.Payroll.Setting.month": "الشهر",
