Modification in the form of printing and Logic of SurveyResultReport

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2716,6 +2716,9 @@
   "boilerplate.containers.Payroll.step": "Step",
   "boilerplate.containers.Payroll.sunday": "Sunday",
   "boilerplate.containers.Payroll.superEmployeeName": "Super Employee",
+  "boilerplate.containers.Payroll.survey.choice" : "Choice" ,
+  "boilerplate.containers.Payroll.survey.totalchoices" : "Total Choices" ,
+  "boilerplate.containers.Payroll.survey.textAnswers" : "Text Answers" ,
   "boilerplate.containers.Payroll.survey.nofound" : "There is no data in the form.",
   "boilerplate.containers.Payroll.survey.Choosequestionnaire" :  "Employee Satisfaction Survey",
   "boilerplate.containers.Payroll.survey.addChoice": "Add choice",
