finish hrResignRule page, add new column in LocationAttendanceReport page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1394,6 +1394,7 @@
   "boilerplate.containers.Payroll.Attendance.visitStartTime": "Visit Start Time",
   "boilerplate.containers.Payroll.Attendance.visitEndTime": "Visit End Time",
   "boilerplate.containers.Payroll.Attendance.shiftDateCalculatedFromEndDate": "Shift date calculated from end date",
+  "boilerplate.containers.Payroll.Attendance.locationName": "Location Name",
   "boilerplate.containers.Payroll.august": "August",
   "boilerplate.containers.Payroll.balance": "Balance",
   "boilerplate.containers.Payroll.bank": "Bank",
@@ -1804,6 +1805,12 @@
   "boilerplate.containers.Payroll.HumanResources.notSpecifiedContract": "Not Specified Contract",
   "boilerplate.containers.Payroll.HumanResources.CreateResignReason": "Create Resign Reason",
   "boilerplate.containers.Payroll.HumanResources.EditResignReason": "Edit Resign Reason",
+  "boilerplate.containers.Payroll.HumanResources.firstYear": "First Year",
+  "boilerplate.containers.Payroll.HumanResources.between2To5Years": "Between Two To Five Years",
+  "boilerplate.containers.Payroll.HumanResources.moreThan5Years": "More Than Five Years",
+  "boilerplate.containers.Payroll.HumanResources.SettlementYears": "Settlement Years",
+  "boilerplate.containers.Payroll.HumanResources.CreateHrResignRule": "Create Hr Resign Rule",
+  "boilerplate.containers.Payroll.HumanResources.EditHrResignRule": "Edit Hr Resign Rule",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "Employee",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "Employee Investigation",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "Employee",
