--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1394,6 +1394,7 @@
    "boilerplate.containers.Payroll.Attendance.visitStartTime": "وقت بدء الزيارة",
    "boilerplate.containers.Payroll.Attendance.visitEndTime": "وقت انتهاء الزيارة",
    "boilerplate.containers.Payroll.Attendance.shiftDateCalculatedFromEndDate": "تاريخ الورديه يحسب من تاريخ الخروج",
+   "boilerplate.containers.Payroll.Attendance.locationName": "اسم الموقع",
    "boilerplate.containers.Payroll.Attendance.visitPeriod": "مدة الزيارة",
   "boilerplate.containers.Payroll.august": "أغسطس",
   "boilerplate.containers.Payroll.balance": "الرصيد",
@@ -1805,6 +1806,12 @@
   "boilerplate.containers.Payroll.HumanResources.notSpecifiedContract": "عقد غير محدد المده",
   "boilerplate.containers.Payroll.HumanResources.CreateResignReason": "إضافة سبب الاستقالة",
   "boilerplate.containers.Payroll.HumanResources.EditResignReason": "تعديل سبب الاستقالة",
+  "boilerplate.containers.Payroll.HumanResources.firstYear": "اول السنة",
+  "boilerplate.containers.Payroll.HumanResources.between2To5Years": "اقل من خمس سنوات",
+  "boilerplate.containers.Payroll.HumanResources.moreThan5Years": "اكثر من خمس سنوات",
+  "boilerplate.containers.Payroll.HumanResources.SettlementYears": " عدد سنين التسوية",
+  "boilerplate.containers.Payroll.HumanResources.CreateHrResignRule": "اضافة قواعد الاستقالة",
+  "boilerplate.containers.Payroll.HumanResources.EditHrResignRule": "تعديل قواعد الاستقالة",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "كود الموظف",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "تحقيق مع موظف",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "الموظف",
